second form - started
it took me a while to figure out how to text area and input fields be across from each other.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Web Dev Deja</h1>
         <h2>Contact Forms</h2>
     </header>
-
+<!--
     <section id="form1">
         <div class="first">
             <h1>Contact Us</h1>
@@ -37,9 +37,19 @@
             </form>
         </div>
     </section>
-
+-->
     <section id="form2">
-        
+        <h1>Let's Work Together</h1>
+
+        <div id="second">
+            <form action="#" method="POST">
+                <input id="inputs2" type="text">
+                <input id="inputs2" type="text">
+                <input id="inputs2" type="text">
+                <textarea id="message2" name="" id=""></textarea>
+                <input id="formSubmitBtn2" type="submit" value="Send">
+            </form>
+        </div>
     </section>
 
     <section id="form3">
