--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="imgs/WebDevDeja.png" type="image/png">
     <link href="https://fonts.googleapis.com/css?family=IBM+Plex+Mono|IBM+Plex+Sans|IBM+Plex+Serif" rel="stylesheet">
 
-    <title>Contact Forms</title>
+    <title>Contact Forms by WebDevDeja</title>
 </head>
 
 <body>
@@ -23,16 +23,11 @@
         <div class="first">
             <h1>Contact Us</h1>
             <h2>for a custom quote</h2>
-
             <form id="firstForm" action="#" method="POST">
                 <input id="inputs1" type="text" name="fullname" placeholder="Your Name" required>
-                
                 <input id="inputs1" type="email" name="email" placeholder="Your Email" required>
-
                 <input id="inputs1" type="tel" name="phone" placeholder="Your Phone Number">
-
                 <textarea name="message" id="message" placeholder="Your message here"></textarea>
-
                 <input id="firstFormSubmitBtn" type="submit" value="Send">
             </form>
         </div>
