third form started
no issues so far. this one was a breeze

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Web Dev Deja</h1>
         <h2>Contact Forms</h2>
     </header>
-
+<!--
     <section id="form1">
         <div class="first">
             <h1>Contact Us</h1>
@@ -51,9 +51,21 @@
         </div>
        </form>
     </section>
-
+-->
     <section id="form3">
-        
+        <div id="third">
+            <h1>Wanna Chat?</h1>
+            <h2>just write your message below!</h2>
+            <form action="#" method="POST">
+                <div id="f3inputs">
+                    <input id="inputs3" type="text" name="fullname" placeholder="Username" required>
+                    <input id="inputs3" type="email" required>
+                </div>
+                <div id="message3box">
+                    <textarea id="message3" name="message"></textarea>
+                </div>
+            </form>
+        </div>
     </section>
 
     <section id="form4">
