Fourth Contact Form Finished

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Web Dev Deja</h1>
         <h2>Contact Forms</h2>
     </header>
-
+<!--
     <section id="form1">
         <div class="first">
             <h1>Contact Us</h1>
@@ -70,9 +70,19 @@
             </form>
         </div>
     </section>
-
+-->
     <section id="form4">
-        
+        <h1>Say Hello</h1>
+            <form action="#" method="POST">
+                <div id="forthFlex">
+                    <input id="inputs4" type="text" name="name" placeholder="Whats your name?" required>
+                    <input id="inputs4" type="email" name="email" placeholder="and your email?" required>
+                    <textarea name="message" id="message4" placeholder="What would you like to say?" required></textarea>
+                </div>
+                <div id="submitBtn4Box">
+                    <input id="submitBtn4" type="submit" value="Send Message">
+                </div>
+            </form>
     </section>
 
     <section id="form5">
