--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <h1>Web Dev Deja</h1>
         <h2>Contact Forms</h2>
     </header>
-<!--
+
     <section id="form1">
         <div class="first">
             <h1>Contact Us</h1>
@@ -84,24 +84,25 @@
                 </div>
             </form>
     </section>
--->
+
     <section id="form5">
         <h1>Contact Me</h1>
         <div>
             
         </div>
         <form action="#" method="POST">
-            <div id="lastTop">
-                <input type="text" id="lastinputs" placeholder="Name" required>
-                <input type="email" id="lastinputs" placeholder="Email" required>
-            
-                <div id="lastBottom">
-                    <input type="text" id="lastInputBottom" placeholder="Subject">
-                    <textarea name="Message" id="message5" required></textarea>
-                </div>
-            </div>
-            <div>
-                <input type="submit">
+            <div id="last">
+                <div id="lastTop">
+                        <input type="text" id="lastinputs" placeholder="Name" required>
+                        <input type="email" id="lastinputs" placeholder="Email" required>
+                    </div>
+                    <div id="lastBottom">
+                        <input type="text" id="lastInputBottom" placeholder="Subject">
+                        <textarea name="Message" id="message5" placeholder="Your Message" required></textarea>
+                    </div>
+                    <div id="lastbtnbox">
+                        <input id="lastbtn" type="submit">
+                    </div>
             </div>
         </form>
     </section>
